--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
         "@types/node": "^16.11.22",
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "@types/react-redux": "^7.1.22",
         "gh-pages": "^3.2.3",
         "prettier": "^2.5.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
         "react-scripts": "5.0.0",
+        "redux-saga": "^1.1.3",
+        "typesafe-actions": "^5.1.0",
         "typescript": "^4.5.5",
         "web-vitals": "^2.1.4"
     },
