--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
+    "d3": "^7.3.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/jquery": "^3.5.13"
   }
 }
