--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
+    "axios": "^0.25.0",
     "d3": "^7.3.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.5.1",
